# sum-of-squares-bench-rs

./: Cargo.toml  LICENSE  disasm.sh
benches/: bench.rs
results/290321-kb-to-64-mb-byref/reports/: index.html
results/290321-kb-to-64-mb-byref/reports/Sum of squares/: index.html
results/290321-kb-to-64-mb-byref/reports/Sum of squares/1 MB/: index.html
results/290321-kb-to-64-mb-byref/reports/Sum of squares/1 kB/: index.html
results/290321-kb-to-64-mb-byref/reports/Sum of squares/16 MB/: index.html
results/290321-kb-to-64-mb-byref/reports/Sum of squares/16 kB/: index.html
results/290321-kb-to-64-mb-byref/reports/Sum of squares/256 kB/: index.html
results/290321-kb-to-64-mb-byref/reports/Sum of squares/4 MB/: index.html
results/300321-kb-to-64-mb-btreeset/reports/: index.html
results/300321-kb-to-64-mb-btreeset/reports/Sum of squares/: index.html
results/300321-kb-to-64-mb-byval/reports/: index.html
results/300321-kb-to-64-mb-byval/reports/Sum of squares/: index.html
results/300321-kb-to-64-mb-hashset/reports/: index.html
results/300321-kb-to-64-mb-hashset/reports/Sum of squares/: index.html
results/300321-kb-to-64-mb-linkedlist/reports/: index.html
results/300321-kb-to-64-mb-linkedlist/reports/Sum of squares/: index.html
results/300321-kb-to-64-mb-vec/reports/: index.html
results/300321-kb-to-64-mb-vec/reports/Sum of squares/: index.html
results/300321-kb-to-64-mb-vecdeque/reports/: index.html
results/300321-kb-to-64-mb-vecdeque/reports/Sum of squares/: index.html
src/: lib.rs  main.rs
(+607 files in other folders)
